2016-??-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.037_01)
* Newest versions of libmysqlclient and the MariaDB C connector no longer
  export the __WIN__ macro. If this macro is not present we would not
  compile in the poll.h-based async-support. Changed to use the _WIN32
  macro instead. Thanks to Sergei Golubchik for suggesting the fix.

2016-10-03 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.037)
* Security release to patch possible buffer overflow in prepared
  statements. Reported and fixed by Pali Rohár. This vulnerability
  is present in all releases at least back to versions 3.0 of the
  driver, which were released in 2005.
  The CVE identifier for this vulnerability is CVE-2016-1246.

2016-08-23 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.036)
Stable version, to include all changes since 4.035.

2016-08-19 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035_03)
* By mistake, when DBD::mysql was compiled against libmariadb, it
  did not compile in SSL support.
  Reported by Jitka Plesnikova @ Red Hat
   (https://rt.cpan.org/Public/Bug/Display.html?id=116959)
   (https://bugzilla.redhat.com/show_bug.cgi?id=1366773)
* If the database test server was not on localhost and the test database was
  not yet created, we would not correctly create the test database.
  Reported by Vladimir Marek.
   (https://rt.cpan.org/Ticket/Display.html?id=112072)

2016-08-11 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035_02)
* Test 56connattr.t failed when run when performance schema is enabled, but
  tests were run as a user with limited permissions.
  Reported by Jérôme Étévé.
  (https://rt.cpan.org/Public/Bug/Display.html?id=115980)
* In 4.033_03 we added a patch from Petr Písař @ Red Hat for a problem on
  64-bit big-endian systems. The patch was applied but the unit test was not,
  also, there was no entry in the change log.
  Unit test provided by Vladimir Marek.