@@ -1,8 +1,10 @@
-2016-??-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.037_01)
+2016-10-14 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.037_01)
 * Newest versions of libmysqlclient and the MariaDB C connector no longer
   export the __WIN__ macro. If this macro is not present we would not
   compile in the poll.h-based async-support. Changed to use the _WIN32
   macro instead. Thanks to Sergei Golubchik for suggesting the fix.
+* Fix from Pali Rohár to not use unsafe sprintf with variable lengt,
+  changes to bind logic, and added test 40server_prepare_crash. 
 
 2016-10-03 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.037)
 * Security release to patch possible buffer overflow in prepared
